--- a/services/worker/package.json
+++ b/services/worker/package.json
@@ -10,7 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bullmq": "^5.56.1",
-    "ioredis": "^5.6.1"
+    "bullmq": "^1.91.1",
+    "dns": "^0.2.2",
+    "dotenv": "^17.2.0",
+    "ioredis": "^5.6.1",
+    "redis": "^5.6.0",
+    "tree": "^0.1.3"
   }
 }
