--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,16 @@
-version: '3.8'
-
 services:
   mongo:
     image: mongo:7
     container_name: mongo
     ports:
       - "27017:27017"
+    command:  ["--replSet", "rs0", "--bind_ip_all"]
     volumes:
       - mongo_data:/data/db
     environment:
       MONGO_INITDB_DATABASE: easyemail
     networks:
-      - app-network
-
-  redis:
-    image: redis:7
-    container_name: redis
-    ports:
-      - "6380:6379"
-    volumes:
-      - redis_data:/data
-    networks:
-      - app-network
+      - app-network 
 
   log-sign:
     build:
@@ -31,7 +20,6 @@ services:
       - "5000:5000"
     depends_on:
       - mongo
-      - redis
     env_file:
       - ./services/log-sign/.env
     networks:
@@ -45,44 +33,41 @@ services:
       - "5002:5001"
     depends_on:
       - mongo
-      - redis
     env_file:
       - ./services/core/.env
-    networks:
-      - app-network
-
-  worker:
-    build:
-      context: ./services/worker
-    container_name: worker
-    depends_on:
-      - core
-      - mongo
-      - redis
-    env_file:
-      - ./services/worker/.env
-    restart: always
     networks:
       - app-network
 
   summarizer:
     build:
       context: ./services/summarizer
-      dockerfile: Dockerfile
     container_name: summarizer
     ports:
-      - "5004:5004"
+      - "5003:5002"
     depends_on:
+      - mongo
+    env_file:
+      - ./services/summarizer/.env
+    networks:
+      - app-network
+  
+  frontend:
+    build:
+      context: ./oe_test
+    container_name: frontend
+    ports:
+      - "3000:80"
+    depends_on:
+      - log-sign
       - core
-    restart: unless-stopped
+      - summarizer
     networks:
       - app-network
 
+
 volumes:
   mongo_data:
-  redis_data:
 
 networks:
   app-network:
     driver: bridge
-
