--- a/services/core/package.json
+++ b/services/core/package.json
@@ -11,9 +11,12 @@
   "description": "",
   "dependencies": {
     "bullmq": "^5.56.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "googleapis": "^150.0.1",
+    "html-to-text": "^9.0.5",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
