--- a/services/core/Dockerfile
+++ b/services/core/Dockerfile
@@ -1,11 +1,14 @@
-FROM node:18
-
+# Stage 1: Build (dependencies)
+FROM node:18-alpine AS builder
 WORKDIR /app
-
 COPY package*.json ./
-RUN npm install
-
+RUN npm ci
 COPY . .
 
+# Stage 2: Runtime
+FROM node:18-alpine
+WORKDIR /app
+COPY --from=builder /app /app
 EXPOSE 5001
 CMD ["node", "server.js"]
+
