--- a/services/log-sign/Dockerfile
+++ b/services/log-sign/Dockerfile
@@ -1,12 +1,14 @@
-FROM node:18
-
+# Stage 1: Build
+FROM node:18-alpine AS builder
 WORKDIR /app
-
 COPY package*.json ./
-RUN npm install
-
-
+RUN npm ci
 COPY . .
 
+# Stage 2: Runtime
+FROM node:18-alpine
+WORKDIR /app
+COPY --from=builder /app /app
 EXPOSE 5000
 CMD ["node", "server.js"]
+
