--- a/services/summarizer/Dockerfile
+++ b/services/summarizer/Dockerfile
@@ -1,10 +1,14 @@
-FROM node:20-alpine
-
+# Stage 1: Build
+FROM node:20-alpine AS builder
 WORKDIR /app
-
 COPY package*.json ./
-RUN npm install
-
+RUN npm ci
 COPY . .
 
+# Stage 2: Runtime
+FROM node:20-alpine
+WORKDIR /app
+COPY --from=builder /app /app
+EXPOSE 5002
 CMD ["node", "server.js"]
+
